# mlx-whisper-dictation

./: .gitignore  AGENTS.md  LICENSE  README.md  _test_hang.py  bootstrap.sh  install-launch-agent.sh  launch-agent.plist.template  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run.sh  setup.py  uninstall-launch-agent.sh  whisper-dictation.py
.github/agents/: refactor.agent.md
.github/workflows/: build-macos-app.yml  deploy-docs.yml
assets/icons/: Dictator.icns
docs/: architecture.md  cjm.mmd  index.md  plan-localVoiceAgentWithObsidian.prompt.md  user-behavior.md
docs/api/: entrypoint.md  runtime.md  setup.md
docs/api/modules/: audio.md  config.md  diagnostics.md  history.md  hotkeys.md  llm.md  llm_runtime.md  permissions.md  transcriber.md  ui.md
docs/javascripts/: mermaid.js
scripts/: generate_docs.py  selfcheck.py
src/: __init__.py  app.py  audio.py  config.py  diagnostics.py  hotkeys.py  llm.py  permissions.py  transcriber.py  ui.py
src/adapters/: __init__.py  hotkey_dialog.py  overlay.py  ui.py
src/domain/: __init__.py  audio.py  constants.py  hotkeys.py  llm_processing.py  ports.py  transcription.py  types.py
src/infrastructure/: __init__.py  asr_runtime.py  audio_runtime.py  hotkeys.py  llm_runtime.py  permissions.py  text_input.py  whisper_runtime.py
src/infrastructure/persistence/: __init__.py  defaults.py  diagnostics.py  history.py  microphone_profiles.py
src/use_cases/: __init__.py  hotkey_management.py  llm_pipeline.py  microphone_profiles.py  recording.py  settings.py  transcription.py
tests/: conftest.py  test_app.py  test_asr_runtime.py  test_build.py  test_clipboard.py  test_config.py  test_diagnostics.py  test_domain_types.py  test_generate_docs.py  test_history.py  test_history_persistence.py  test_hotkeys.py  test_llm.py  test_llm_pipeline.py  test_llm_runtime.py  test_microphone.py  test_microphone_profiles_persistence.py  test_paste_methods.py  test_permissions.py  test_selfcheck.py  test_setup_unit.py  test_silence_filter.py  test_statusbar.py  test_transcriber_logic.py  test_transcription.py  test_transcription_rules.py
