[tool.poetry]
name = "whisper-dictation"
version = "0.1.0"
description = "Offline macOS dictation app built on MLX Whisper"
authors = ["Denis Zagitov"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyaudio = "^0.2.13"
mlx-whisper = "*"
rumps = "^0.4.0"
pynput = "^1.7.6"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
